# EnergyControlSystem

./: .env  .env.example  README.md  docker-compose.yml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: api.ts
frontend/src/components/: DashboardLayout.tsx  Sidebar.tsx
frontend/src/data/: mockData.ts
frontend/src/pages/: InputsPage.tsx  RealTimePage.tsx  SchedulePage.tsx  TestsPage.tsx
infra/postgres/: init.sql
services/: Dockerfile
services/ingestion/: Dockerfile  pyproject.toml
services/ingestion/app/: main.py
services/ingestion/app/api/: routes.py
services/ingestion/app/core/: config.py  database.py
services/intraday/: pyproject.toml
services/intraday/app/: main.py
services/intraday/app/api/: routes.py
services/intraday/app/consumers/: kafka_consumer.py
services/intraday/app/core/: config.py  database.py
services/intraday/app/producers/: kafka_producer.py
services/intraday/app/repositories/: intraday_repo.py  schedule_repo.py
services/intraday/app/schemas/: intraday.py
services/intraday/app/services/: intraday_optimizer.py
services/optimizer/: Dockerfile  pyproject.toml
services/optimizer/app/: main.py
services/optimizer/app/api/: routes.py
services/optimizer/app/consumers/: kafka_consumer.py
services/optimizer/app/core/: config.py
services/optimizer/app/producers/: kafka_producer.py
services/optimizer/app/repositories/: schedule_repo.py
services/optimizer/app/schemas/: optimization.py
services/optimizer/app/services/: day_ahead_optimizer.py
(+9 files in other folders)
